Added Android quick setting tile (#3)
* MainActivity always checks for permission on startup.

* modified icons to look better

* removed no permission logic, now it's just goes into an unavailable state

* updated the tile icons with a lock

* implement direct service start with MainActivity fallback using FGS error handling broadcast

* added tile logic unit tests

* updated .md files

* implement ApiGuard utility and fix API compatibility issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">mic-lock</string>
+    <string name="tile_label">MicLock</string>
+    <string name="tile_description">Quick toggle for microphone protection</string>
 </resources>
