--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">mic-lock</string>
     <string name="tile_label">MicLock</string>
     <string name="tile_description">Quick toggle for microphone protection</string>
+
+    <!-- Screen-on delay configuration -->
+    <string name="screen_on_delay_title">Screen-On Delay</string>
+    <string name="screen_on_delay_summary">Wait %1$.1f seconds before activating when screen turns on</string>
+    <string name="screen_on_delay_disabled">Disabled (activates immediately)</string>
 </resources>
