--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="screen_off_delay_label">Delayed Reactivation (0–5s)</string>
     <string name="screen_off_stays_off_label">Stays-Off</string>
     <string name="screen_off_always_on_label">Always-On</string>
+
+    <!-- Debug recording auto-stop notification -->
+    <string name="debug_auto_stop_title">Debug Recording Stopped</string>
+    <string name="debug_auto_stop_message">Recording stopped after 30 minutes to prevent excessive battery drain.</string>
 </resources>
