modified and fixced UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="debug_auto_stop_message">Recording stopped after 30 minutes to prevent excessive battery drain.</string>
 
     <!-- Menu items -->
-    <string name="menu_debug_tools">Debug Tools</string>
+    <string name="menu_debug_tools">Debug Recording</string>
     <string name="menu_stop_debug_recording">Stop &amp; Share Debug Logs</string>
     <string name="menu_about">About</string>
 
