--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,8 @@
     <string name="about_license_title">License</string>
     <string name="about_license_description">MicLock is licensed under the MIT License.\n\nCopyright © 2024 Mic-Lock Contributors\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED.</string>
     <string name="back_button">Back</string>
+
+    <!-- Permission dialogs -->
+    <string name="mic_permission_required_message">Mic-Lock requires microphone permission to function.\n\nThe app will stay open while you grant permission. If you need to grant it manually:\n\n1. Tap \"Grant Permission\"\n2. Select \"Allow\" in the permission dialog\n\nOr go to Settings > Apps > Mic-Lock > Permissions > Microphone > Allow</string>
+    <string name="mic_permission_denied_message">Microphone permission was denied. Mic-Lock cannot function without this permission.\n\nTo grant permission manually:\n\n1. Tap \"Open Settings\" below\n2. Select \"Permissions\"\n3. Tap \"Microphone\"\n4. Select \"Allow\"\n5. Return to Mic-Lock\n\nThe app will stay open while you grant permission.</string>
 </resources>
